# rust-zero2prod

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: main.yml  security-audit.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  port_saver.rs  schema.rs  startup.rs
src/catchers/: mod.rs  unauthorized.rs  unprocessable_entity.rs
src/domain/: subscriber_email.rs
src/email/: email.rs  mod.rs  ses_email_client.rs
src/guards/: authenticated_user.rs  basic_auth.rs  mod.rs
src/models/: mod.rs  subscription.rs  subscription_token.rs  user.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
