[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
tokio = "1.14.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuidv07"] }
dotenv = "0.15.0"
config = "0.11.0"
serde = "1.0.132"
uuid = "0.8.2"
chrono = "0.4.19"

[dev-dependencies]
reqwest = "0.11.7"
