[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
tokio = "1.14.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuidv07"] }
diesel_migrations = "1.4.0"
config = "0.11.0"
serde = "1.0.132"
serde-aux = "3.0.1"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1.29", features = ["log"] }
tracing-subscriber = { version = "0.3.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"
unicode-segmentation = "1.8.0"
claim = "0.5.0"

[dev-dependencies]
reqwest = "0.11.7"
once_cell = "1.9.0"
