[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
aws-config = "0.3.0"
aws-sdk-sesv2 = "0.3.0"
chrono = "0.4.19"
claim = "0.5.0"
config = "0.11.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuidv07"] }
diesel_migrations = "1.4.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = { version = "0.8.4", features = ["std_rng"] }
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
serde = "1.0.132"
serde-aux = "3.0.1"
tokio = "1.14.0"
thiserror = "1.0.30"
tracing = { version = "0.1.29", features = ["log"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.8.0"
uuid = { version = "0.8.2", features = ["v4"] }
validator = "0.14.0"

[dev-dependencies]
linkify = "0.8.0"
once_cell = "1.9.0"
reqwest = { version = "0.11.7", features = ["json"] }
serde_json = "1.0.73"
